# py-yjs-libp2p

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
keys/: NodeB.json  nodeA.json
launcher/: spawn_network.py
node/: config.py  formula.py  main.py  p2p_node.py  server.py  state.py
ui/: dashboard.py  local_node.py
