[project]
name = "py-yjs-libp2p"
version = "0.1.0"
description = "Local-only, multi-process Python implementation of core libp2p concepts with Streamlit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "trio",
    "hypercorn[trio]",
    "starlette",
    "multiaddr",
    "zeroconf",
    "streamlit",
    "requests",
    "libp2p",
    "async-generator>=1.10",
    "streamlit-autorefresh>=1.0.1",
    "pandas>=2.3.3",
]

[tool.uv.sources]
libp2p = { git = "https://github.com/Kartik-1902/py-libp2p.git", rev = "29e361b9774cfb4f415b1a3ec9af5fe577bb5e78" }
